Addressed warnings throughout